# cbp

./: .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  binaries.html  book.toml  developer.html  homedir.html  index.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-0a6a130b.js  searchindex-22d018a1.js  searchindex-447f12ed.js  searchindex-4c9b26cc.js  searchindex-7e6fd9cc.js  searchindex-8d6c40df.js  searchindex-a40e787f.js  searchindex-e9bb21c0.js  toc-418f43c1.js  toc-862b95b9.js  toc-e8c55cbc.js  toc.html
.github/workflows/: build.yml  codecov.yml  docs.yml  publish.yml  test-binaries.yml  validate-schema.yml
attempts/tools/: init.sh  list.sh  local.sh  prebuild.sh
doc/: binaries.md  common.md  developer.md  dot-design.md  homedir.md  release.md  sources.md
doc/attempts/: DALIGNER.sh  msys2.md  xz.sh
doc/binaries/: cross.md  fonts.md  macos.md  msys2.md  perl.md  prebulds.md  rust.md  vcpkg.md  windows.md
doc/schema/: schema.json
doc/triplets/: arm64-macos-zig.cmake  x64-windows-zig.cmake  zig-windows.cmake
docs/: SUMMARY.md  binaries.md  developer.md  release.md
docs/attempts/: cross.md
docs/binaries/: macos.md  perl.md  windows.md
docs/help/: avail.md  build.md  build_font.md  build_prebuild.md  build_source.md  build_test.md  build_upload.md  build_validate.md  check.md  collect.md  dot.md  info.md  init.md  install.md  list.md  local.md  prefix.md  remove.md  snap.md  (+5 more)
help/: avail.html  build.html  build_font.html  build_prebuild.html  build_source.html  build_test.html  build_upload.html  build_validate.html  check.html  collect.html  dot.html  info.html  init.html  install.html  list.html  local.html  prefix.html  remove.html  snap.html  snap_delta.html  snap_list.html  snap_load.html  snap_save.html  tar.html
scripts/: ASTER.sh  DALIGNER.sh  DAZZ_DB.sh  FASTGA.sh  FASTK.sh  MERQURY.FK.sh  TRF.sh  argtable.sh  arial.sh  aster.sh  bcalm.sh  bcftools.sh  bedtools.sh  bifrost.sh  blast.sh  bowtie2.sh  bwa.sh  bzip2.sh  c-ares.sh  clustalo.sh  cmake.sh  common.sh  consel.sh  datamash.sh  diamond.sh  download-source.sh  easel.sh  eigen.sh  expat.sh  faops.sh  fastk.sh  fastqc.sh  fasttree.sh  fira.sh  freebayes.sh  gdbm.sh  gmp.sh  gsl.sh  hmmer.sh  hmmer2.sh  (+66 more)
src/: bp.rs  cbp.rs  lib.rs
test-binaries/: anchr.sh  argtable2.sh  bat.sh  bcalm.sh  bifrost.sh  blast.sh  bowtie2.sh  bwa.sh  bzip2.sh  clustalo.sh  cmake.sh  common.sh  curl.sh  daligner.sh  datamash.sh  dazzdb.sh  diamond.sh  dust.sh  easel.sh  expat.sh  eza.sh  faops.sh  fastga.sh  fastk.sh  fasttree.sh  fd.sh  freebayes.sh  gdbm.sh  gmp.sh  gnuplot.sh  graphviz.sh  gsl.sh  hmmer.sh  hnsm.sh  htslib.sh  hyperfine.sh  intspan.sh  iqtree2.sh  jnv.sh  jq.sh  (+52 more)
tests/: cli.rs  cli_build.rs  cli_collect.rs  cli_dot.rs  cli_dotcbp.rs  cli_init.rs  cli_online.rs  cli_pkg.rs  cli_snap.rs  cli_utils.rs
triplets/: x64-linux-zig.cmake  x64-windows-zig.cmake  zig-macos.cmake
(+188 files in other folders)
