[package]
name = "cbp"
version = "0.3.1"
authors = ["wang-q <wang-q@outlook.com>"]
description = "`cbp` is a Binary Package manager"
documentation = "https://github.com/wang-q/cbp"
homepage = "https://github.com/wang-q/cbp"
repository = "https://github.com/wang-q/cbp"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2021"
publish = false

[[bin]]
name = "cbp"
path = "src/cbp.rs"

[dependencies]
clap = { version = "4.4.3", features = ["cargo"] }
anyhow = "1.0.75"
regex = "1.9.5"

flate2 = "1.0.27"
tar = "0.4.40"
dirs = "6.0.0"
toml = "0.8.20"

tempfile = "3.8.0"
walkdir = "2.5.0"
glob = "0.3.2"

ureq = { version = "2.12.1" , features = ["json", "socks-proxy"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
md-5 = "0.10.6"
chrono = "0.4.40"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
mockall = "0.13.1"

[profile.release]
lto = true
