[package]
name = "cbp"
version = "0.3.10"
authors = ["wang-q <wang-q@outlook.com>"]
description = "`cbp` is a Binary Package manager"
documentation = "https://github.com/wang-q/cbp"
homepage = "https://github.com/wang-q/cbp"
repository = "https://github.com/wang-q/cbp"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2021"
publish = false

[[bin]]
name = "cbp"
path = "src/cbp.rs"

[dependencies]
clap = { version = "4.4.3", features = ["cargo"] }
anyhow = "1.0.75"
regex = "1.9.5"

flate2 = "1.0.27"
tar = "0.4.40"
dirs = "6.0.0"
dunce = "1.0.5"

tempfile = "3.8.0"
walkdir = "2.5.0"
fs_extra = "1.3"
glob = "0.3.2"
cmd_lib = "1.9.3"

ureq = { version = "2.12.1" , features = ["json", "socks-proxy"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
md-5 = "0.10.6"
chrono = "0.4.40"
jsonschema = "0.17.1"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
mockito = "1.6.1"

[profile.release]
lto = true
